# YADRO_RandomUser

./: .gitignore  README.md
infra/: docker-compose.yaml
src/: .env.example  Makefile  README.md  makefile  pyproject.toml
src/app/: const.py  main.py
src/app/api/: main_router.py
src/app/api/endpoints/: __init__.py  load.py  user.py
src/app/core/: __init__.py  rds.py  setting.py  settings.py
src/app/pages/: __init__.py  index.py
src/app/schemas/: __init__.py  hompage.py  load.py
src/app/services/: __init__.py  user_loader.py  user_pagination.py
src/app/templates/: index.html
src/static/js/: script.js
src/static/styles/: styles.css
src/templates/: index.html
